--- a/charts/sonarqube/terratest/golden_suites/DOCKER_71_04_case/config.golden.yaml
+++ b/charts/sonarqube/terratest/golden_suites/DOCKER_71_04_case/config.golden.yaml
@@ -10,6 +10,6 @@ metadata:
     release: release-name
     heritage: Helm
 data:
-  sonar.properties: sonar.secretKeyPath=/opt/sonarqube/secret/sonar-secret.txt
   sonar.properties:
     sonar.es.bootstrap.checks.disable=true
+    sonar.secretKeyPath=/opt/sonarqube/secret/sonar-secret.txt
