--- a/charts/sonarqube/terratest/golden_suites/DOCKER_71_03_case/deployment.golden.yaml
+++ b/charts/sonarqube/terratest/golden_suites/DOCKER_71_03_case/deployment.golden.yaml
@@ -1,14 +1,12 @@
 ---
 # Source: sonarqube/templates/deployment.yaml
-# This template explain the issue from community https://community.sonarsource.com/t/sonarsecretkey-with-sonar-chart/64152
-# release-name-sonarqube-config is not even defined in the volumes nor mounted.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: release-name-sonarqube
   labels:
     app: sonarqube
-    chart: sonarqube-5.4.0
+    chart: sonarqube-5.4.1
     release: release-name
     heritage: Helm
     app.kubernetes.io/name: sonarqube-release-name-sonarqube
@@ -29,10 +27,10 @@ spec:
         app: sonarqube
         release: release-name
       annotations:
-        checksum/init-sysctl: 38b6a73f08534d3d7547e2570446912ba63b6986c7b78f3f22b1abf03250349b
-        checksum/plugins: 8aba274cd251da37fc15b4213c1b287fd4be7fda18eae143549f9402d499f2a2
-        checksum/config: ca23fa3f1e3e5c68b3965cedbd0bb0c54d6c2036c02e780a7552f18c658f8c85
-        checksum/secret: b00e392756c5926cd4e24e523ec16080e9f4e9bd0d993c4e71300910802d750b
+        checksum/init-sysctl: 356f33e4e9c98bff726920aed095e9e869662f3b2d8b2f26a91e72a4f035d8f5
+        checksum/plugins: ea58264fbf33c4fea016841cc0a01cdd877bf8a7484cf83788cf397002ff1966
+        checksum/config: 87cc3250cf1fa6a57cfdbf720520df32af203d68c64725190ac9273d560f10b0
+        checksum/secret: 027b7c178b693f21a98cdcb53071cca8abbfda1c77d8829deb08cf2f9ca92fd3
     spec:
       serviceAccountName: default
       securityContext:
@@ -51,6 +49,31 @@ spec:
           volumeMounts:
             - name: init-sysctl
               mountPath: /tmp/scripts/
+        - name: concat-properties
+          image: busybox:1.32
+          imagePullPolicy: IfNotPresent
+          command: 
+          - sh
+          - -c
+          - |
+            #!/bin/sh
+            if [ -f /tmp/props/sonar.properties ]; then
+              cat /tmp/props/sonar.properties > /tmp/result/sonar.properties
+            fi
+            if [ -f /tmp/props/secret.properties ]; then
+              cat /tmp/props/secret.properties > /tmp/result/sonar.properties
+            fi
+            if [ -f /tmp/props/sonar.properties -a -f /tmp/props/secret.properties ]; then
+              awk 1 /tmp/props/sonar.properties /tmp/props/secret.properties > /tmp/result/sonar.properties
+            fi
+          volumeMounts:
+            - mountPath: /tmp/props/sonar.properties
+              name: config
+              subPath: sonar.properties
+            - mountPath: /tmp/result
+              name: concat-dir
+          resources:
+            {}
         - name: "wait-for-db"
           image: busybox:1.32
           imagePullPolicy: IfNotPresent
@@ -105,6 +128,8 @@ spec:
           securityContext:
             runAsUser: 1000
           volumeMounts:
+            - mountPath: /opt/sonarqube/conf/
+              name: concat-dir
             - mountPath: /opt/sonarqube/secret/
               name: secret
             - mountPath: /opt/sonarqube/certs
@@ -129,6 +154,12 @@ spec:
               cpu: 400m
               memory: 2Gi
       volumes:
+      - name: config
+        configMap:
+          name: release-name-sonarqube-config
+          items:
+          - key: sonar.properties
+            path: sonar.properties
       - name: secret
         secret:
           secretName: mySecretKey
@@ -154,5 +185,8 @@ spec:
         emptyDir:
           {}
       - name : tmp-dir
+        emptyDir:
+          {}
+      - name : concat-dir
         emptyDir:
           {}
