--- a/charts/sonarqube/terratest/golden_suites/DOCKER_71_3_case/config.golden.yaml
+++ b/charts/sonarqube/terratest/golden_suites/DOCKER_71_3_case/config.golden.yaml
@@ -11,3 +11,5 @@ metadata:
     release: release-name
     heritage: Helm
 data:
+  sonar.properties:
+    sonar.secretKeyPath=/opt/sonarqube/secret/sonar-secret.txt
