--- a/charts/sonarqube-dce/Chart.yaml
+++ b/charts/sonarqube-dce/Chart.yaml
@@ -23,7 +23,7 @@ annotations:
     - kind: changed
       description: "Update Sonarqube to 9.9.0"
     - kind: changed
-      description: "Mark 7.x.x chart as LTS"
+      description: "Mark 7.x.x chart as the LTS (SonarQube 9.9.x) chart"
     - kind: changed
       description: "Update the list of supported kubernetes versions"
     - kind: changed
